# NADS-SSE

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
Data/: DodgeBlinkShout.esp
Data/MCM/Config/DodgeFramework/: config.json  settings.ini
Data/MCM/Config/Dodge_MCO-DXP/: config.json  settings.ini
Data/Meshes/OpenAnimationReplacer/NADS/: .gitignore  NADS_ANIMATOR_GUIDE.txt  NADS_README.txt  config.json
Data/Meshes/OpenAnimationReplacer/NADS/TP_Dodge_Backward/: config.json
Data/Meshes/OpenAnimationReplacer/NADS/TP_Dodge_Forward/: config.json
Data/Meshes/OpenAnimationReplacer/NADS/TP_Dodge_Frozen/: config.json
Data/Meshes/OpenAnimationReplacer/NADS/TP_Dodge_Left/: config.json
Data/Meshes/OpenAnimationReplacer/NADS/TP_Dodge_LeftBackward/: config.json
Data/Meshes/OpenAnimationReplacer/NADS/TP_Dodge_LeftForward/: config.json
Data/Meshes/OpenAnimationReplacer/NADS/TP_Dodge_Right/: config.json
Data/Meshes/OpenAnimationReplacer/NADS/TP_Dodge_RightBackward/: config.json
Data/Meshes/OpenAnimationReplacer/NADS/TP_Dodge_RightForward/: config.json
Data/Nemesis_Engine/mod/dmco/: info.ini
Data/Nemesis_Engine/mod/dmco/0_master/: #0106.txt  #0107.txt  #0108.txt  #0721.txt  #2097.txt  #dmco$0.txt  #dmco$1.txt  #dmco$2.txt  #dmco$3.txt  #dmco$4.txt  #dmco$5.txt  #dmco$6.txt  #dmco$7.txt
Data/Nemesis_Engine/mod/tkuc/: info.ini
Data/SKSE/Plugins/: DodgeBlinkShout.ini
Data/Scripts/Source/: DBS_Blink_AME.psc  DodgeBlinkNative.psc  DodgeBlink_GenericAME.psc  DodgeBlink_MCN.psc
src/: DodgeBlink.cpp
tools/: CompilePapyrus.ps1  StageTestBuild.ps1
tools/papyrus_stubs/: Debug.psc  GlobalVariable.psc  README.md
(+247 files in other folders)
